--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
   <div class="top-container">
-    <img src="logo.png" alt="Logo" class="top-center-image" />
+    <img src="minepedia.png" alt="Logo" class="top-center-image" />
     <div class="animated-text">How amazing is it?</div>
   </div>
 
