--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
 
     .top-center-image {
-      height: 120px;
+      height: 30px; /* Made the image very small */
       width: auto;
       display: block;
     }
